--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@
 __pycache__
 venv
 .env
-sage.py
-stream.py
-test.py
-Procfile
+
+Dockerfile
 /bert-base-turkish-cased-mean-nli-stsb-tr/
 /clip-ViT-B-32-multilingual-v1/
 /universal-sentence-encoder-multilingual_3/
